<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jaypore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_Profile">Profile</string>
    <string name="action_Order">Order Details</string>
    <string name="action_Help">Help</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Buttons on boarding Screen-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="send_otp">Send OTP</string>
    <string name="phone_no">Phone Number</string>

    <!--Firebase push Notification channel-->
    <string name="notification_channel_id">your.custom.id </string>
    <string name="notification_channel_name"> Your custom notification channel name </string>
    <string name="default_notification_channel_id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="didn_t_recieve_the_otp" tools:ignore="StringEscaping">Didn\'t recieve the OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="my_deals">My Deals</string>
    <string name="deals_around_you">Deals around you</string>
    <string name="sharing_message_popup">Share Your deal:%1$s with your friends to get the product</string>
    <string name="share_image">Share Image</string>
    <string name="_100">100</string>
    <string name="verify">Verify</string>
    <string name="profiletitle">Profile</string>

    <string name="strike_text"><strike>Rs. 700</strike></string>
    <string name="address_hint">Please add your address for shipping!</string>
    <string name="view_deals">View Deals</string>
    <string name="get_free_shipping_on_your_purchase"><ul> <li> Get free shipping on your purchase.</li> </ul> </string>
    <string name="message_us">Message Us</string>
    <string name="total_amount">Total Amount</string>
    <string name="reward_points_applied">Reward Points applied</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="grand_total">Grand Total</string>
    <string name="my_reward_deals">My Reward Deals</string>

    <string name="you_can_do_">You can do the following if you are here.\n\nYou can check your internet connection.\u00E2\u0080\u00A8 \nYou should restart the app
</string>
    <string name="rewards">Rewards</string>


</resources>