<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rewardscoin"
        android:icon="@drawable/ic_group_2683"
        android:orderInCategory="100"
        android:title="Coins"
        app:actionLayout="@layout/menu_item_layout"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/Profile"
        android:orderInCategory="100"
        android:title="@string/action_Profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/Order_details"
        android:orderInCategory="100"
        android:title="@string/action_Order"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/action_Help"
        app:showAsAction="never" />

</menu>
