<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.OtpActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_marginTop="50dp"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:orientation="vertical">
       
       <ImageView
           android:layout_width="130dp"
           android:layout_height="130dp"
           android:layout_marginTop="80dp"
           android:contentDescription="@string/app_name"
           android:src="@drawable/recieved"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:text="OTP Verification"
           android:textColor="@color/primary_text"
           android:textStyle="bold"
           android:textSize="22sp"/>
       
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_marginStart="50dp"
           android:layout_marginEnd="50dp"
           android:gravity="center"
           android:text="Enter the OTP sent to"
           android:textColor="@color/secondary_text"
           android:textSize="16sp"/>

       <TextView
           android:id="@+id/textMobile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="4dp"
           android:layout_marginStart="50dp"
           android:layout_marginEnd="50dp"
           android:gravity="center"
           android:textColor="@color/primary_text"
           android:textSize="16sp"
           android:textStyle="bold"/>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/inputCode1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/primary_text"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="LabelFor"/>

       <EditText
           android:id="@+id/inputCode2"
           android:layout_width="40dp"
           android:layout_height="45dp"
           android:layout_marginStart="4dp"
           android:gravity="center"
           android:imeOptions="actionNext"
           android:importantForAutofill="no"
           android:inputType="number"
           android:maxLength="1"
           android:textColor="@color/primary_text"
           android:textSize="22sp"
           android:textStyle="bold"
           tools:ignore="LabelFor"
           android:layout_marginLeft="4dp" />

       <EditText
           android:id="@+id/inputCode3"
           android:layout_width="40dp"
           android:layout_height="45dp"
           android:layout_marginStart="4dp"
           android:gravity="center"
           android:imeOptions="actionNext"
           android:importantForAutofill="no"
           android:inputType="number"
           android:maxLength="1"
           android:textColor="@color/primary_text"
           android:textSize="22sp"
           android:textStyle="bold"
           tools:ignore="LabelFor"
           android:layout_marginLeft="4dp" />

       <EditText
           android:id="@+id/inputCode4"
           android:layout_width="40dp"
           android:layout_height="45dp"
           android:layout_marginStart="4dp"
           android:gravity="center"
           android:imeOptions="actionNext"
           android:importantForAutofill="no"
           android:inputType="number"
           android:maxLength="1"
           android:textColor="@color/primary_text"
           android:textSize="22sp"
           android:textStyle="bold"
           tools:ignore="LabelFor"
           android:layout_marginLeft="4dp" />

       <EditText
           android:id="@+id/inputCode5"
           android:layout_width="40dp"
           android:layout_height="45dp"
           android:layout_marginStart="4dp"
           android:gravity="center"
           android:imeOptions="actionNext"
           android:importantForAutofill="no"
           android:inputType="number"
           android:maxLength="1"
           android:textColor="@color/primary_text"
           android:textSize="22sp"
           android:textStyle="bold"
           tools:ignore="LabelFor"
           android:layout_marginLeft="4dp" />

       <EditText
           android:id="@+id/inputCode6"
           android:layout_width="40dp"
           android:layout_height="45dp"
           android:layout_marginStart="4dp"
           android:gravity="center"
           android:imeOptions="actionDone"
           android:importantForAutofill="no"
           android:inputType="number"
           android:maxLength="1"
           android:textColor="@color/primary_text"
           android:textSize="22sp"
           android:textStyle="bold"
           tools:ignore="LabelFor"
           android:layout_marginLeft="4dp" />



</LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:gravity="center"
           android:visibility="invisible"
           android:orientation="horizontal">


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/didn_t_recieve_the_otp"
               android:textColor="@color/secondary_text"
               android:textSize="16sp"
               />

           <TextView
               android:id="@+id/ResendOtp"
               android:layout_marginStart="8dp"
               android:text="@string/resend_otp"
               android:textColor="@color/Red"
               android:textSize="17sp"
               android:textStyle="bold"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp" />

       </LinearLayout>

       <Button
           android:id="@+id/buttonVerify"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="30dp"
           android:background="@drawable/rewardcard"
           android:text="@string/verify"
           android:textSize="18sp"
           android:textColor="@color/colorAccent"
           android:textStyle="bold"/>

   </LinearLayout>


</ScrollView>